replace tabs with spaces in markdown files

--- a/archives/transcriptions/1766_2_20_p1.md
+++ b/archives/transcriptions/1766_2_20_p1.md
@@ -13,7 +13,7 @@ Pietro Capper \~
 
 Giovanni Goom \[this line and the above in curly bracket\] ambedue Inglesi
 
-	Con un Domestico in Casa di Pietro 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Con un Domestico in Casa di Pietro 
 
 Danna San Giovanni Grisostomo.
 
@@ -23,7 +23,7 @@ Danna San Giovanni Grisostomo.
 
 Siegue Forastieri partiti. \~ \~ \~
 
-		15 Feb(brari)o
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15 Feb(brari)o
 
 Il Co(nte) Giulio Agricola d’Udine con due Domestici
 
@@ -33,7 +33,7 @@ tico partiti disse li 14 sca(du)to, allogiarono
 
 alla Locanda della Cortesia St’Angelo
 
-	//-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
 Vicenzo Silani, e li due fratelli Pelès tutti e tre
 
@@ -45,7 +45,7 @@ allog(iaro)no alla Loc(and)a
 
 Zobenigo
 
-	// 16 d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// 16 d(et)to
 
 Antonio Gasparetti di Verona partito disse li 
 
@@ -53,6 +53,6 @@ Antonio Gasparetti di Verona partito disse li
 
 chini San Moisé
 
-									Giovanni Somazzi dep(uta)to 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Giovanni Somazzi dep(uta)to 
 
 a notar li Forastieri
