--- a/archives/transcriptions/1769_5_8_p1.md
+++ b/archives/transcriptions/1769_5_8_p1.md
@@ -14,7 +14,7 @@ P(ri)mo Ma(ggi)o
 
 Moisé Levi con sua Moglie ed una Figlia di Pa-
 
-	dova in casa d’Isach Lazaro Lovia
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;dova in casa d’Isach Lazaro Lovia
 
 		//-d(et)to
 
@@ -26,13 +26,13 @@ Malta
 
 Isach Raffael Finzi di Trieste in Casa di Be:
 
-	netto Luzzato.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;netto Luzzato.
 
 //-d(et)to
 
 Jacob Morpurgo di Trieste: in casa di Bonetto
 
-	Polacco.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Polacco.
 
 //-d(et)to
 
@@ -50,7 +50,7 @@ Vedova del q(uonda)m Aron Coen
 
 Jacob Salom di Padova in Casa di Samuel
 
-	Salom.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Salom.
 
 //-d(et)to
 
@@ -74,7 +74,7 @@ Casa del q(uonda)m Simeon Todesco
 
 Abram Joachin Pace di Padova in Casa
 
-	del q(uonda)m Emanuel Pesaro \~
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;del q(uonda)m Emanuel Pesaro \~
 
 // // //  Siegue.
 
