--- a/archives/transcriptions/1769_5_8_p2.md
+++ b/archives/transcriptions/1769_5_8_p2.md
@@ -20,25 +20,25 @@ di Benetto Todros suo Cong(iun)to.
 
 Benetto Pincherle di Gorizia: in Casa del
 
-    q(uonda)m Emanuel Pesaro.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;q(uonda)m Emanuel Pesaro.
 
 //-d(et)to
 
 Jacob Conigliano di Cenoda In casa d’Abram
 
-    Valenzin.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Valenzin.
 
 //-d(et)to
 
 Leon Vita Benvenisti: di Padova in Casa
 
-    di Samuel Salom.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;di Samuel Salom.
 
 //-d(et)to
 
 Lazaro Levi Mai di Strino: in casa di Jacob
 
-    Morpurgo.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Morpurgo.
 
 //-d(et)to
 
@@ -46,13 +46,13 @@ Salamon Latino
 
 Jacob Guastalla \[this line and the above in curly brackets\] ambedue di Mantova
 
-    in Casa del q(uonda)m Beniamin Cottolengo.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;in Casa del q(uonda)m Beniamin Cottolengo.
 
 //-d(et)to
 
 Sabbadin Levi di Padova: in casa del q(uonda)m Jacob
 
-    Lovia
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lovia
 
 //-d(et)to
 
@@ -78,23 +78,23 @@ Leon Veneziano \[this line and the two above in curly brackets\] tutti di Ferrar
 
 Lustro Levi di Padova
 
-    In Casa del q(uondam) Emanuel Pesaro Cam(eran)te.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Casa del q(uondam) Emanuel Pesaro Cam(eran)te.
 
-    siegue
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;siegue
 
 \[Right column\]
 
-        5 Mag(gi)o
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5 Mag(gi)o
 
 Salamon Medoro di Padova: in Casa di Me
 
 sculam Sacramella
 
-    //-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
 Caliman Karara di Verona in Casa
 
-    di Jacob Curiel
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;di Jacob Curiel
 
 //-d(et)to
 
