--- a/archives/transcriptions/1770_5_28.md
+++ b/archives/transcriptions/1770_5_28.md
@@ -10,33 +10,33 @@ Forastieri annotati riferiti da cameranti
 
 nella scad(ut)a sett(iman)a come siegue. \~
 
-		 A dì 20 Mag(gi)o
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A dì 20 Mag(gi)o
 
 O Francesco, e Giuseppe F(rate)lli Darson \_ Inglesi
 
     Giuseppe Braganze di \- \- \-    Vicenza
 
-	con un Domestico
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con un Domestico
 
         Alla Loc(and)a del Cauco (?) San Moisè
 
-	//-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
 Il Canonico Zuè Pioranari Heyer di Magonza
 
-	Con un Domestico
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Con un Domestico
 
 Il Co(nte) Francesco Kinzgsech \~
 
 Giuseppe Lisnar   \~ \~ \~.              \[this line and the above in curly brackets\] ambedue di Baviera
 
-		con due Domestici
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con due Domestici
 
 Il Co(nte) Antonio d’Alemy    \~ \~
 
 Giovanni Grober  \~ \~ \~  \[this line and the above in curly brackets\] ambedue di Grazz
 
-		con due domestici
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con due domestici
 
 Giuseppe Palmarino
 
@@ -44,11 +44,11 @@ Girolamo Borellino
 
 Antonio Piroffi  \[this line and the two above in curly brackets\] Tutti e tre
 
-							                   di Genova
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; di Genova
 
-		Allo Scudo di Francia San Luca
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Allo Scudo di Francia San Luca
 
-			//21 \-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//21 \-d(et)to
 
 Il Cav(alier) Erle con sua moglie
 
@@ -56,7 +56,7 @@ O Il Cav(alier) Milbank
 
 Mons(ignor) Preston  \[this line and the two above in curly brackets\] Tutti Inglesi
 
-	con quattro Domestici
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con quattro Domestici
 
 In Casa di Pietro Danna Loc(and)a 
 
@@ -66,11 +66,11 @@ In San Gio(vanni) Grisostomo
 
 Li con(ti) Francesco, Filippo, e Federico F(rate)lli
 
-			Mazuchelli
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mazuchelli
 
 Prefetto(?) Antonio Goveraradi? \[this line and the two above in curly brackets\] di Brescia
 
-		con  quattro Domestici
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con  quattro Domestici
 
 Monsignor(?) Archibald Maclauclan di Scozia
 
@@ -82,7 +82,7 @@ Monsignor Desasi
 
 L’Abbate De Saint-Tamarin \[this line and the two above in curly brackets\] Tutti e tre Francesi
 
-		con cinque Domestici
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con cinque Domestici
 
 Gioseppe Compagnucci di Roma
 
@@ -112,17 +112,17 @@ in Casa di Valentin Todeschin
 
 San Moisè
 
-		//d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//d(et)to
 
 Angelo Magaluzzi di \--- Cividal del Friuli
 
 Giuseppe Messio di Udine
 
-	Partiti disse li 18 scad(u)to allog(giaron)o
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Partiti disse li 18 scad(u)to allog(giaron)o
 
 Alla Ca’ Feltrina Santa Maria Zobenigo
 
-	         //d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//d(et)to
 
 Ernesto di Bargh di \--- Hanover
 
@@ -132,7 +132,7 @@ Partiti disse 18 scad(u)to allog(giaron)o
 
 Allo Scudo di Francia San Lucca
 
-		   // 20 d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// 20 d(et)to
 
 Don Giuseppe San Martin di Napoli
 
@@ -144,7 +144,7 @@ partiti disse li 19 scad(u)to allog(giaron)o
 
 Allo Scudo di Francia S.Lucca
 
-		//21 d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//21 d(et)to
 
 Girolamo Benetondi di Schio 
 
@@ -154,7 +154,7 @@ In Casa di Valentin Todeschin
 
 Lo(cand)a in S. Moisè
 
-	//26 d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//26 d(et)to
 
 Prefetto(?) Antonio Speranza
 
