remove tabs and replace with spaces

--- a/archives/transcriptions/1766_2_20_p1.md
+++ b/archives/transcriptions/1766_2_20_p1.md
@@ -7,7 +7,7 @@ Siegue Forastieri annotati \~ \~ \~
 
 \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
-O	17 Feb(brari)o
+O&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;17 Feb(brari)o
 
 Pietro Capper \~
 
