--- a/archives/transcriptions/1766_2_20_p2.md
+++ b/archives/transcriptions/1766_2_20_p2.md
@@ -15,31 +15,31 @@ Mandolin Todres di Padova in casa di
 
 Salomon Levi dal Banco
 
-        //-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
 Leon q(uonda)m Jacob Tedesco con moglie, e cinque Fi
 
 gliuoli di Francoforte nell’Osp(izi)o de’ Poveri
 
-        //-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
 Elia Amnon di Livorno: in Casa del q(uonda)m Be
 
 niamin Ottolengo
 
-        //-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
 Salvador Anau di Ferrara con un Domes(tic)o
 
 in casa del q(uonda)m Emanuel Pesaro
 
-        //-d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
 Abram Asdà di Cento in Casa del q(uonda)m Simon
 
 Todesco
 
-            //13 d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//13 d(et)to
 
 Manassc Pincherle di Verona
 
@@ -47,13 +47,13 @@ Josef Simon Velemburg d’Achenens ambe
 
 due in Casa del q(uonda)m Emanuel Pesaro
 
-            //15 d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//15 d(et)to
 
 Israel, e David F(rate)lli Bassan di Verona: in
 
 Casa d’Isach Morpurgo
 
-            //16 d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//16 d(et)to
 
 Yseppo Grego con moglie una figliola ed
 
@@ -67,13 +67,13 @@ Forastieri Ebrei partiti e riferiti dal Dep(utat)o nella
 
 Scad(ut)a Sett(iman)a come siegue \~ \~ \~
 
-        13 Feb(brai)o
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;13 Feb(brai)o
 
 Aron Arcangiolo di Pesaro partito disse li 11
 
 Scad(u)to allogiò dal q(uonda)m Beniamin Ottolengo
 
-        // \--d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// \--d(et)to
 
 Angià q(uonda)m Leon Todesco con moglie di Francoforte 
 
@@ -103,7 +103,7 @@ Partiti disse li 12 scad(u)to allog(iaro)no in
 
 in Casa di Salomon Levi dal Banco
 
-        // 14 \--d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// 14 \--d(et)to
 
 Salamon Cormos da Cormos partito disse li
 
@@ -111,7 +111,7 @@ Salamon Cormos da Cormos partito disse li
 
 Pesaro
 
-        \--d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\--d(et)to
 
 La Vedova Gentila di Fer(rar)a partita disse li
 
