--- a/archives/transcriptions/1770_5_28.md
+++ b/archives/transcriptions/1770_5_28.md
@@ -14,11 +14,11 @@ nella scad(ut)a sett(iman)a come siegue. \~
 
 O Francesco, e Giuseppe F(rate)lli Darson \_ Inglesi
 
-    Giuseppe Braganze di \- \- \-    Vicenza
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Giuseppe Braganze di \- \- \-    Vicenza
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con un Domestico
 
-        Alla Loc(and)a del Cauco (?) San Moisè
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alla Loc(and)a del Cauco (?) San Moisè
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
@@ -28,11 +28,11 @@ Il Canonico Zuè Pioranari Heyer di Magonza
 
 Il Co(nte) Francesco Kinzgsech \~
 
-Giuseppe Lisnar   \~ \~ \~.              \[this line and the above in curly brackets\] ambedue di Baviera
+Giuseppe Lisnar   \~ \~ \~. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\[this line and the above in curly brackets\] ambedue di Baviera
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con due Domestici
 
-Il Co(nte) Antonio d’Alemy    \~ \~
+Il Co(nte) Antonio d’Alemy&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\~ \~
 
 Giovanni Grober  \~ \~ \~  \[this line and the above in curly brackets\] ambedue di Grazz
 
