--- a/archives/transcriptions/1770_8_20.md
+++ b/archives/transcriptions/1770_8_20.md
@@ -17,9 +17,9 @@ Adi 13\. Ag(os)to
 
 Il Maggiore Niccolò Verlolaingen \_ \_ \_ Svizzero
 
-	al servizio del Re di Prussia
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;al servizio del Re di Prussia
 
-	con un Domestico
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con un Domestico
 
 Mons. William Cotton
 
@@ -29,15 +29,15 @@ con due Domestici
 
 In Casa di Bon Daizi
 
-	In Sa(nt)i Apostoli.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Sa(nt)i Apostoli.
 
-	//15: d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//15: d(et)to
 
-Il Cornetta Antonio Alberti di Schio			
+Il Cornetta Antonio Alberti di Schio 
 
 Alla Cortesia Sant’Angelo.
 
-	//10: d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//10: d(et)to
 
 Il Barone Baissen di \_ \_ \_ Sassonia
 
@@ -45,7 +45,7 @@ Alla Regina d’Ungheria
 
 San Paternian
 
-		//20: d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//20: d(et)to
 
 Federico Borgoroze(?) della \_ \_ Cecerenia (?)
 
@@ -53,9 +53,9 @@ Ferdinando Motta di \_ \_ \_ Verona
 
 Giovanni Battista Maffoni di \_ \_ \_ Brescia
 
-	Alla Loc(and)a della Verona
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alla Loc(and)a della Verona
 
-	San Fantin 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;San Fantin 
 
 \[Right column\]
 
@@ -73,7 +73,7 @@ Alla Cà Feltrina S(an)ta Maria
 
 Zobenigo.
 
-		//15: d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//15: d(et)to
 
 Il Co(nte) Pio: Maria Scetti di \_ Bergamo
 
@@ -81,6 +81,6 @@ partito disse li 14 scad(ut)o  allogiò
 
 Alla Cortesia Sant’Angelo.
 
-									Giovanni Somazzi
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Giovanni Somazzi
 
 Dep(uta)to a notar li forastieri
