--- a/archives/transcriptions/1766_2_20_p2.md
+++ b/archives/transcriptions/1766_2_20_p2.md
@@ -111,7 +111,7 @@ Salamon Cormos da Cormos partito disse li
 
 Pesaro
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\--d(et)to
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// \--d(et)to
 
 La Vedova Gentila di Fer(rar)a partita disse li
 
