fix transcription August 20, 1770

--- a/archives/transcriptions/1770_8_20.md
+++ b/archives/transcriptions/1770_8_20.md
@@ -75,7 +75,7 @@ Zobenigo.
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//15: d(et)to
 
-Il Co(nte) Pio: Maria Scetti di \_ Bergamo
+Il Co(nte) Gio(vanni) Maria Scetti di \_ Bergamo
 
 partito disse li 14 scad(ut)o  allogiò 
 
