update with transcription changes

--- a/archives/transcriptions/1769_5_8_p2.md
+++ b/archives/transcriptions/1769_5_8_p2.md
@@ -44,7 +44,7 @@ Lazaro Levi Mai di Strino: in casa di Jacob
 
 Salamon Latino
 
-Jacob Guastalla \[this line and the above in curly brackets\] ambedue di Mantova
+Iacob Guastalla \[this line and the above in curly brackets\] ambedue di Mantova
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;in Casa del q(uonda)m Beniamin Cottolengo.
 
