--- a/archives/transcriptions/1770_5_28.md
+++ b/archives/transcriptions/1770_5_28.md
@@ -1,6 +1,5 @@
 # AVS IS 758-781 28/5/1770
 
-O
 
 A dì 28 Mag(gi)o 1770
 
@@ -12,13 +11,13 @@ nella scad(ut)a sett(iman)a come siegue. \~
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A dì 20 Mag(gi)o
 
-O Francesco, e Giuseppe F(rate)lli Darson \_ Inglesi
+Francesco, e Giuseppe F(rate)lli Darson \_ Inglesi
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Giuseppe Braganze di \- \- \-    Vicenza
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con un Domestico
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alla Loc(and)a del Cauco (?) San Moisè
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alla Loc(and)a del Cauco (?) S. /[San/] Moisè
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//-d(et)to
 
@@ -34,7 +33,7 @@ Giuseppe Lisnar   \~ \~ \~. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\[this line and 
 
 Il Co(nte) Antonio d’Alemy&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\~ \~
 
-Giovanni Grober  \~ \~ \~  \[this line and the above in curly brackets\] ambedue di Grazz
+Giovanni Grober  \~ \~ \~  \[this line and the above in curly brackets\] ambedue di Gratfz
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con due domestici
 
@@ -46,13 +45,13 @@ Antonio Piroffi  \[this line and the two above in curly brackets\] Tutti e tre
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; di Genova
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Allo Scudo di Francia San Luca
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Allo Scudo di Francia S. /[San/] Lucca
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//21 \-d(et)to
 
 Il Cav(alier) Erle con sua moglie
 
-O Il Cav(alier) Milbank
+Il Cav(alier) Milbank
 
 Mons(ignor) Preston  \[this line and the two above in curly brackets\] Tutti Inglesi
 
@@ -60,7 +59,7 @@ Mons(ignor) Preston  \[this line and the two above in curly brackets\] Tutti Ing
 
 In Casa di Pietro Danna Loc(and)a 
 
-In San Gio(vanni) Grisostomo
+In S. /[San/] Gio(vanni) Grisostomo
 
 // \_d(et)to
 
@@ -74,7 +73,7 @@ Prefetto(?) Antonio Goveraradi? \[this line and the two above in curly brackets\
 
 Monsignor(?) Archibald Maclauclan di Scozia
 
-Giuseppe Rosè.  Inglese O
+Giuseppe Rosè.  Inglese
 
 Monsignor Deneri
 
@@ -92,7 +91,7 @@ Il Marc(hese) Cagiugiati
 
 Il Barone Tonielli \[this line and the above in curly brackets\] ambedue di Milano
 
-Alli Tre Re San Lucca
+Alli Tre Re S. /[San/] Lucca
 
 siegue
 
@@ -110,7 +109,7 @@ Partito disse li 18 scad(u)to allogiò
 
 in Casa di Valentin Todeschin 
 
-San Moisè
+S. /[San/] Moisè
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//d(et)to
 
@@ -120,7 +119,7 @@ Giuseppe Messio di Udine
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Partiti disse li 18 scad(u)to allog(giaron)o
 
-Alla Ca’ Feltrina Santa Maria Zobenigo
+Alla Cà Feltrina S<sup>ta</sup>: /[Santa/] M<sup>a</sup>: /[Maria/] Zobenigo
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//d(et)to
 
@@ -130,11 +129,11 @@ con un domestico
 
 Partiti disse 18 scad(u)to allog(giaron)o
 
-Allo Scudo di Francia San Lucca
+Allo Scudo di Francia S. /[San/] Lucca
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// 20 d(et)to
 
-Don Giuseppe San Martin di Napoli
+Don Giuseppe S. /[San/] Martin di Napoli
 
 Ernesto Ludricho Francese
 
@@ -142,7 +141,7 @@ Ernesto Ludricho Francese
 
 partiti disse li 19 scad(u)to allog(giaron)o
 
-Allo Scudo di Francia S.Lucca
+Allo Scudo di Francia S. /[San/] Lucca
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//21 d(et)to
 
@@ -156,7 +155,7 @@ Lo(cand)a in S. Moisè
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//26 d(et)to
 
-Prefetto(?) Antonio Speranza
+Pre Antonio Speranza
 
 Baldassare Favino \[this line and the above in curly brackets\] ambedue di Udine
 
@@ -166,7 +165,7 @@ Partiti disse li 25 scad(u)to allog(iaron)o
 
 in Casa di Valentin Todeschin 
 
-Lo(cand)a in San Moisè
+Lo(cand)a in S. /[San/] Moisè
 
 Giovanni Somazzi Dep(uta)to 
 
