--- a/archives/transcriptions/1770_8_20.md
+++ b/archives/transcriptions/1770_8_20.md
@@ -1,86 +1,56 @@
 AVS IS 758-781 August/20/1770
+Adi 20: Ag(os)to 1770.
 
+**[Left column]**
 
-Adi 20: Ag(os)to 1770\.
+Forastieri annotati riferiti da cameranti  
+nella scad(ut)a sett(iman)a come siegue. ~ ~  
+________________________________________
 
-\[Left column\]
+Adi 13. Ag(os)to  
 
-O
+Il Mag(giore) Niccolò ?lelingen _ _ _ Svizzero  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;al servizio del Re di Prussia  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con un Domestico
 
-Forastieri annotati riferiti da cameranti 
+Mons.(ignor) William Cotton  
+Mons.(ignor) Tomaso Wodehouse [this line and the above in curly bracket] ambedue Inglesi  
+con due Domestici  
+In Casa di Bon Darij  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Sa(nt)i Apostoli.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//15: d(et)to
 
-nella scad(ut)a sett(iman)a come siegue. \~ \~
+Il Cornetta Antonio Alberti di Schio  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alla Cortesia S(an)t'Angelo.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//10: d(et)to
 
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
+Il Barone Baissen di _ _ _ Sassonia  
+Alla Regina d'Ungheria  
+S(an) Paternian  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//20: d(et)to
 
-Adi 13\. Ag(os)to 
+Federico ?gorosd della _ _ Ucrania  
+Ferdinando Zotta di _ _ _ Verona  
+Giovanni Battista Maffoni di _ _ _ Brescia  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alla Loc(and)a della Verona  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;S(an) Fantin
 
-Il Maggiore Niccolò Verlolaingen \_ \_ \_ Svizzero
+**[Right column]**
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;al servizio del Re di Prussia
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;con un Domestico
-
-Mons. William Cotton
-
-Mons. Tomaso Wodehouse \[this line and the above in curly bracket\] ambedue Inglesi
-
-con due Domestici 
-
-In Casa di Bon Daizi
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In Sa(nt)i Apostoli.
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//15: d(et)to
-
-Il Cornetta Antonio Alberti di Schio 
-
-Alla Cortesia Sant’Angelo.
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//10: d(et)to
-
-Il Barone Baissen di \_ \_ \_ Sassonia
-
-Alla Regina d’Ungheria
-
-San Paternian
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//20: d(et)to
-
-Federico Borgoroze(?) della \_ \_ Cecerenia (?)
-
-Ferdinando Motta di \_ \_ \_ Verona
-
-Giovanni Battista Maffoni di \_ \_ \_ Brescia
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alla Loc(and)a della Verona
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;San Fantin 
-
-\[Right column\]
-
-Forastieri partiti riferiti da cameranti
-
-nella scad(ut)a Setti(man)a come siegue. \~ 
+Forastieri partiti riferiti da cameranti  
+nella scad(ut)a Setti(man)a come siegue. ~  
 
 Adi 11: Ag(os)to
 
-Carlo Paulovich \_ \_ \_ \_ Dalmatiao
-
-partito disse li 11 scad(ut)o allogiò 
-
-Alla Cà Feltrina S(an)ta Maria 
-
-Zobenigo.
-
+Carlo Paulovich _ _ _ _ Dalmatiao  
+partito disse li 11 scad(ut)o allogiò  
+Alla Cà Feltrina S(an)ta Maria  
+Zobenigo.  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//15: d(et)to
 
-Il Co(nte) Gio(vanni) Maria Scetti di \_ Bergamo
+Il Co(nte) Gio(vanni) Maria Scetti di _ Bergamo  
+partito disse li 14 scad(ut)o allogiò  
+Alla Cortesia S(an)t'Angelo.
 
-partito disse li 14 scad(ut)o  allogiò 
-
-Alla Cortesia Sant’Angelo.
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Giovanni Somazzi
-
-Dep(uta)to a notar li forastieri
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Giovanni Somazzi  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dep(uta)to a notar li forastieri
